Update css, sign up

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,9 +8,9 @@
 
 .gradient-bg-welcome {
   background-color:#0f0e13;
-  background-image: radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
-                    radial-gradient(at 50% 0%, hsla(225,39%,30%,1) 0, transparent 50%), 
-                    radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
+  background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
+                    radial-gradient(at 76.9% 68.5%, #0199fe 0, transparent 30%), 
+                    radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
 }
 
 .liquid-title-gradient {
@@ -29,3 +29,12 @@
 ::selection {
   background: var(--nextui-colors-blue200)
 }
+
+
+.outline-gradient {
+  border: 1px solid;
+  padding: 0.01rem 1.2rem;
+  border-radius: 0.80rem;
+  border-image: linear-gradient(to right, #209cff, #68e0cf) 1;
+  }
+  
