--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,14 +7,15 @@
 }
 
 .gradient-bg {
+  position: relative;
+  overflow: hidden;
   background-color:#0f0e13;
   background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
-                    radial-gradient(at 76.9% 68.5%, #0199fe 0, transparent 30%), 
                     radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
+  /* transform: rotate(30deg);  */
 }
-
-.gradient-bg-mobile:before {
-  transform: rotate(80deg);
+.gradient-bg:before {
+  transform: rotate(810deg);
 }
 
 .liquid-title-gradient {
@@ -43,3 +44,46 @@
   border-image: linear-gradient(to right, #209cff, #68e0cf) 1;
   }
   
+@media (min-width: 640px) and ( max-width: 767px) {
+  .gradient-bg {
+    background-color:#0f0e13;
+    background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
+                      radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .gradient-bg {
+    background-color:#0f0e13;
+    background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
+                      radial-gradient(at 74.5% 68.8%, #0199fe 0, transparent 21%), 
+                      radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .gradient-bg {
+    background-color:#0f0e13;
+    background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
+                      radial-gradient(at 74.9% 70.5%, #0199fe 0, transparent 26%), 
+                      radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
+  }
+}
+
+@media (min-width: 1280px) and (max-width: 1535px) {
+  .gradient-bg {
+    background-color:#0f0e13;
+    background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
+                      radial-gradient(at 76.9% 70.5%, #0199fe 0, transparent 28%), 
+                      radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
+  }
+}
+
+@media (min-width: 1536px) {
+  .gradient-bg {
+    background-color:#0f0e13;
+    background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
+                      radial-gradient(at 76.9% 70.5%, #0199fe 0, transparent 30%), 
+                      radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
+  }
+}
