--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,7 +42,13 @@
   padding: 0.01rem 1.2rem;
   border-radius: 0.80rem;
   border-image: linear-gradient(to right, #209cff, #68e0cf) 1;
-  }
+}
+
+
+.feature-glow {
+  background-color:#0f0e13;
+  background-image: radial-gradient(at 50% 59%, #000F76 1.2rem, transparent 30%);
+}
   
 @media (min-width: 640px) and ( max-width: 767px) {
   .gradient-bg {
