--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,15 @@
   transform: rotate(810deg);
 }
 
+.gradient-test {
+  position: relative;
+  overflow: hidden;
+  background-color:#0f0e13;
+  background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
+                    radial-gradient(at 10% 40%, #000F76 0, transparent 100%);
+  /* transform: rotate(30deg);  */
+}
+
 .liquid-title-gradient {
   background-color: #209cff;
   background-image: radial-gradient(at 4% 36%, #209cff 0, transparent 53%), 
