--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,11 @@
 * {
   outline: none !important;
 }
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
 
 .gradient-bg {
   position: relative;
@@ -12,19 +17,14 @@
   background-color:#0f0e13;
   background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
                     radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
-  /* transform: rotate(30deg);  */
 }
 .gradient-bg:before {
   transform: rotate(810deg);
 }
 
-.gradient-test {
-  position: relative;
-  overflow: hidden;
+.incentive-gradient {
   background-color:#0f0e13;
-  background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
-                    radial-gradient(at 10% 40%, #000F76 0, transparent 100%);
-  /* transform: rotate(30deg);  */
+  /* background-image: radial-gradient(800px 600px at 66.8% 40%, #AF18AC 0, transparent 45%); */
 }
 
 .liquid-title-gradient {
@@ -33,12 +33,6 @@
                     radial-gradient(at 100% 60%, #68e0cf 0, transparent 50%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-
-.prevent-select {
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
 }
 
 ::selection {
@@ -58,12 +52,24 @@
   background-color:#0f0e13;
   background-image: radial-gradient(at 50% 59%, #000F76 1.2rem, transparent 30%);
 }
+
+@media (max-width:640px) {
+  .incentive-gradient {
+    background-color:#0f0e13;
+    background-image: radial-gradient(500px 300px at 50% 46%, #AF18AC 0, transparent 100%);
+  }
+}
   
 @media (min-width: 640px) and ( max-width: 767px) {
   .gradient-bg {
     background-color:#0f0e13;
     background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
                       radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
+  }
+
+  .incentive-gradient {
+    background-color:#0f0e13;
+    background-image: radial-gradient(500px 300px at 50% 46%, #AF18AC 0, transparent 100%);
   }
 }
 
@@ -74,6 +80,12 @@
                       radial-gradient(at 74.5% 68.8%, #0199fe 0, transparent 21%), 
                       radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
   }
+
+  .incentive-gradient {
+    background-color:#0f0e13;
+    background-image: radial-gradient(480px 290px at 50% 46%, #AF18AC 0, transparent 100%);
+
+  }
 }
 
 @media (min-width: 1024px) and (max-width: 1279px) {
@@ -82,6 +94,11 @@
     background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
                       radial-gradient(at 74.9% 68.5%, #0199fe 0, transparent 26%), 
                       radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
+  }
+
+  .incentive-gradient {
+    background-color:#0f0e13;
+    background-image: radial-gradient(370px 260px at 75.8% 40%, #AF18AC 0, transparent 100%);
   }
 }
 
@@ -92,6 +109,11 @@
                       radial-gradient(at 76.9% 68.5%, #0199fe 0, transparent 28%), 
                       radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
   }
+
+  .incentive-gradient {
+    background-color:#0f0e13;
+    background-image: radial-gradient(405px 270px at 73.8% 40%, #AF18AC 0, transparent 100%);
+  }
 }
 
 @media (min-width: 1536px) {
@@ -100,6 +122,11 @@
     background-image: radial-gradient(at 0% 0%, #030303 0, transparent 50%), 
                       radial-gradient(at 76.9% 68.5%, #0199fe 0, transparent 30%), 
                       radial-gradient(at 10% 40%, #000F76 0, transparent 50%);
+  }
+
+  .incentive-gradient {
+    background-color:#0f0e13;
+    background-image: radial-gradient(350px 240px at 66.8% 40%, #AF18AC 0, transparent 100%);
   }
 }
 
