--- a/styles/globals.css
+++ b/styles/globals.css
@@ -123,3 +123,20 @@
   gap: 35px;
   width: 100%;
 }
+
+
+.main-content {
+  padding: 10px;
+  margin-left: 275px;
+  margin-right: 275px;
+}
+
+h2 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 14px;
+  font-weight: bold;
+}
