--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 
 * {
   outline: none !important;
+  scroll-behavior: smooth !important;
 }
 .prevent-select {
   -webkit-user-select: none; /* Safari */
